--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,16 +3,17 @@ name: Deploy Docusaurus to GitHub Pages
 on:
   push:
     branches:
-      - main  # หรือเปลี่ยนเป็น branch ที่ใช้จริง
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # จำเป็นสำหรับการ deploy แบบ full history
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -21,9 +22,7 @@ jobs:
           cache: 'pnpm'
 
       - name: Install PNPM
-        run: |
-          corepack enable
-          corepack prepare pnpm@latest --activate
+        run: npm install -g pnpm
 
       - name: Install dependencies
         run: pnpm install
@@ -35,5 +34,4 @@ jobs:
         env:
           GIT_USER: github-actions[bot]
           USE_SSH: false
-        run: |
-          pnpm run deploy
+        run: pnpm run deploy
