--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Docusaurus to GitHub Pages
+name: Deploy Docusaurus with npm
 
 on:
   push:
@@ -19,21 +19,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'pnpm'
-
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
+          cache: 'npm'
 
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
 
       - name: Build Docusaurus
-        run: pnpm build
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         env:
           GIT_USER: github-actions[bot]
           USE_SSH: false
-        run: pnpm run deploy
+        run: npm run deploy
