--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Docusaurus with npm
+name: Deploy Docusaurus with pnpm
 
 on:
   push:
@@ -19,16 +19,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: 'pnpm'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8 # หรือ 9 ถ้าใช้เวอร์ชันล่าสุด
 
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
 
       - name: Build Docusaurus
-        run: npm run build
+        run: pnpm build
 
       - name: Deploy to GitHub Pages
         env:
           GIT_USER: github-actions[bot]
           USE_SSH: false
-        run: npm run deploy
+        run: pnpm run deploy
