--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,11 @@ jobs:
         with:
           node-version: 20
           cache: 'pnpm'
+        
+      - name: Setup corepack
+        run: |
+          corepack enable
+          corepack prepare pnpm@latest --activate
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
